generated/checkers/refine/KN-Integer-Overflow-c09d2eff-0/build_logs/syntax-repair-refine-0-0/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::productDefinitelyFits(const clang::BinaryOperator*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:202:23: error: no matching function for call to ‘{anonymous}::SAGenTestChecker::getMaxForExpr(const clang::Expr*&, clang::ento::CheckerContext&) const’
  202 |     if (!getMaxForExpr(LHS, C) || !getMaxForExpr(RHS, C))
      |          ~~~~~~~~~~~~~^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:172:8: note: candidate: ‘bool {anonymous}::SAGenTestChecker::getMaxForExpr(const clang::Expr*, clang::ento::CheckerContext&, llvm::APSInt&) const’
  172 |   bool getMaxForExpr(const Expr *E, CheckerContext &C, llvm::APSInt &Out) const {
      |        ^~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:172:8: note:   candidate expects 3 arguments, 2 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:202:49: error: no matching function for call to ‘{anonymous}::SAGenTestChecker::getMaxForExpr(const clang::Expr*&, clang::ento::CheckerContext&) const’
  202 |     if (!getMaxForExpr(LHS, C) || !getMaxForExpr(RHS, C))
      |                                    ~~~~~~~~~~~~~^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:172:8: note: candidate: ‘bool {anonymous}::SAGenTestChecker::getMaxForExpr(const clang::Expr*, clang::ento::CheckerContext&, llvm::APSInt&) const’
  172 |   bool getMaxForExpr(const Expr *E, CheckerContext &C, llvm::APSInt &Out) const {
      |        ^~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:172:8: note:   candidate expects 3 arguments, 2 provided
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
